--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>The Simpso-Family Guy
+    <link rel="stylesheet" href="Style.css">
+  </head>
   <body style="background-color:#000000">
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/mwJXOTwJHT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </body>
+    <div> class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/mwJXOTwJHT0" frameborder="0" allow="accelermeter; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
+    </div>
+   </body>
 </html>
+
+  
